# watt

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml  release.yml  tag.yml
nix/: module.nix  package.nix  shell.nix
src/: battery.rs  config.rs  conflict.rs  core.rs  cpu.rs  daemon.rs  engine.rs  main.rs  monitor.rs
src/cli/: debug.rs
src/config/: load.rs  mod.rs  types.rs  watcher.rs
src/util/: error.rs  mod.rs  sysfs.rs
