[package]
name = "superfreq"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.16"
ctrlc = "3.4"
notify = { version = "8.0.0", features = ["serde"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
