[package]
name = "superfreq"
description = "Modern CPU frequency and power management utility for Linux"
version = "0.3.0"
edition = "2024"
authors = ["NotAShelf <raf@notashelf.dev>"]
rust-version = "1.85"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.16"
ctrlc = "3.4"
notify = { version = "8.0.0", features = ["serde"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
